# homelabd

./: Cargo.toml  README.md  build.rs
etc/: homelabd.service  install.sh  remote-install.sh
proto/: homelabd.proto
src/: config.rs  dispatch.rs  http.rs  main.rs  metrics.rs  net.rs  proto.rs  resolve.rs  scheduler.rs
src/receivers/: hostdb.rs  mod.rs  prometheus.rs
src/subsystems/: mod.rs  prometheus_scan.rs  self_update.rs  system_info.rs
src/tasks/: prometheus.rs
