[package]
name = "homelabd"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
hyper-util = { version = "0.1.15", features = ["full"] }
tokio = { version = "1.36", features = ["full"] }
socket2 = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-info = "0.9"
hostname = "0.4.1"
if-addrs = "0.14.0"
log = "0.4"
env_logger = "0.11"
hyper = { version = "1", features = ["full"] }
prometheus = "0.14.0"
once_cell = "1"
prost = "0.14.1"
prost-types = "0.14.1"
bytes = "1"
async-trait = "0.1.88"
http-body-util = "0.1.3"
futures = "0.3.31"
clap = { version = "4.5", features = ["derive"] }
procfs = "0.17.0"
dns-lookup = "2.0.4"

[build-dependencies]
prost-build = "0.14.1"
